test/bad/functions/variadic05.px

func f(Bool... x) def
    return

f(1, 2)
